# AgentBenchMark

./: .env.example  .gitignore  DOCS.md  Dockerfile  Dockerfile.local-agent  Makefile  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  test.json
benchmark_service/: __init__.py
benchmark_service/agents/: __init__.py  anthropic_adapter.py  base.py  local_adapter.py  local_agent_server.py  openai_adapter.py
benchmark_service/analytics/: benchmark_analytics.py  data_deduction.py
benchmark_service/api/: routes.py
benchmark_service/datasets/: gsm8k-math-v2.json  mmlu-reasoning-v1.json
benchmark_service/evaluators/: benchmark_evaluator.py
benchmark_service/models/: __init__.py
benchmark_service/services/: benchmark_service.py
benchmark_service/workers/: benchmark_worker.py
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  MONITORING.md  OPERATIONS.md  ROADMAP.md  SECURITY.md  TESTING.md
grafana/dashboards/: benchmark-dashboard.json
grafana/provisioning/dashboards/: benchmark-dashboard.json  default.yml
grafana/provisioning/datasources/: prometheus.yml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  persistentvolumeclaim.yaml  secret.yaml  service.yaml  serviceaccount.yaml
prometheus/: prometheus.yml
scripts/: backup.sh  clean-dev.sh  cleanup.sh  deploy.sh  generate-docs.sh  migrate.sh  monitor.sh  performance-test.sh  restore.sh  rollback.sh  run-tests.sh  scale.sh  security-scan.sh  setup-dev.sh  start-dev.sh  stop-dev.sh  test-deployment.sh  update.sh
tests/: README.MD
tests/e2e/: test_full_workflow.py
tests/integration/: test_api.py
tests/unit/: test_agents.py  test_api_routes.py  test_benchmark_analytics.py  test_benchmark_service.py  test_data_deduction.py  test_evaluators.py  test_local_adapter.py
workers/: __init__.py  celery_app.py  tasks.py
